--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,22 +1,9 @@
-/*
-* Font of body
-*/
-@font-face {
-  font-family: 'apercu';
-  src: url('../fonts/apercu_regular.eot.eot'); /* IE9 Compat Modes */
-  src: url('../fonts/apercu_regular.eot.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/apercu_regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/apercu_regular.woff') format('woff'), /* Pretty Modern Browsers */
-       url('../fonts/apercu_regular.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/apercu_regular.svg#svgFontName') format('svg'); /* Legacy iOS */
-  font-weight: normal;
-}
-
 body {
   margin: 0;
   padding: 0;
   min-width: 1200px;
-  font-family: 'apercu';
+	font-family: 'Raleway', sans-serif;
+	word-spacing: 1px;
 }
 
 a {
@@ -36,19 +23,29 @@ a {
 	top: 0;
 	width: 100%;
 	z-index: 100;
-	background-color: rgba(0 , 112 , 255 , 0.3);
+	background-color: rgba(0 , 112 , 255 , 0.9);
 }
 
 .navbar__ul {
-	margin: 0;
+	margin: 0 auto;
 	float: right;
 	list-style-type: none;
 	color: white;
 }
 
 .navbar__list {
-	display: inline-block;
-	padding: 30px 50px;
+	display: inline;
+	float: left;
+	padding-top: 25px;
+	padding-bottom: 25px;
+	right: 0;
+	max-height: 100px;
+}
+
+.navbar__link {
+	text-decoration: none;
+	text-align: center;
+	padding: 25px 40px;
 	/* For font color */
   -moz-transition: color 0.5s ease;
     -o-transition: color 0.5s ease;
@@ -61,15 +58,24 @@ a {
       transition: background-color 0.5s ease;
 }
 
-.navbar__list:hover {
+.navbar__link:hover {
 	background-color: white;
 	color: black;
 }
 
-.navbar__link {
-	margin-left: -4px;
-	text-decoration: none;
-	text-align: center;
+.navbar:after {
+    content: " ";
+    display: table;
+}
+.navbar:after {
+    clear: both;
+}
+.navbar {
+    *zoom: 1;
+}
+
+#pull {
+	display: none;
 }
 
 
@@ -118,10 +124,46 @@ a {
 	overflow: hidden;
 }
 
-/*Footer of the pages*/
+/*Input style*/
+.form {
+	margin-left: 25%;
+	margin-top: 300px;
+}
+
+.form__input-div {
+	position:relative;
+}
+
+.form__input-div .flaticon-profile7 {
+	position: absolute;
+	top: 11px;
+	left: 13px;	
+}
+
+.form__input:focus {
+	outline: none;
+	border-color: #2c97de;
+	box-shadow: 0 0 5px rgba(44, 151, 222, 0.2);
+} 
+
+.form__input {
+	width: 600px;
+	max-height: 55px;
+	padding: 10px 0;
+	margin: 20px;
+	border:1px solid #cfd9db;
+	border-radius: .25em;
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.08);
+	display: block;
+	text-indent: 45px;
+	color: black;
+}
+
+
+/*footer of the pages*/
 .footer {
 	font-size: 14px;
-	background-color: #0070FF;
+	background-color: #107FC9;
 	color: white;
 }
 
@@ -152,4 +194,96 @@ a {
 	text-decoration: none;
 	text-align: center;
 	color: white;
+}
+
+
+/******************************************************************/
+/* Responsive  Menu for tablet*/
+
+@media screen and (max-width: 600px){
+	.navbar {
+		height: auto;
+		margin: 0;
+		padding: 0;
+	}
+
+	.navbar__ul {
+		height: auto;
+		width: 100%;
+		margin: 0;
+		padding: 0;
+		display: inline-block;
+	}
+
+	.navbar__list {
+		position: relative;
+		width: 50%;
+		float: left;
+		border-bottom: 1px solid white;
+		border-right: 1px solid white;
+	}
+
+	.navbar__link {
+		position: absolute;
+		width: 100%;
+		top: 0;
+		padding: 16px;
+		text-align: center;
+	}
+}
+
+/******************************************************************/
+/* Responsive  Menu for Mobile Phone */
+
+
+@media screen and (max-width: 480px) {
+	
+	.navbar__ul {
+		display: none;
+		height: auto;
+		margin-bottom: 10px; 
+	}
+
+	.navbar__list {
+		width: 100%;
+		color: white;
+		z-index: 100;
+		border-bottom: 1px solid white;
+	}
+
+	#pull {
+		display: block;
+		background-color: rgba(0 , 112 , 255 , 0.9);
+		width: 100%;
+		position: relative;
+		outline: none;
+		padding: 10px;
+	}
+
+	#pull:visited {
+		outline: none;
+	}
+
+	#pull:after {
+		content: "";
+		float: right;
+		margin-top: -5px;
+		right: 10px;
+		width: 30px;
+		height: 30px;
+		background: url('../img/menu19.svg') no-repeat;
+		display: inline-block;
+	}
+
+}
+
+/******************************************************************/
+/* Responsive  Menu for Mobile Phone */
+
+@media only screen and (max-width : 320px) {
+    .navbar__list {
+        display: block;
+        float: left;
+        width: 100%;
+    }
 }
