--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -124,19 +124,29 @@ a {
 	overflow: hidden;
 }
 
+/* Contact page */
+.contact_header {
+	margin-top: 170px;
+	font-size: 40px;
+	text-align: center;
+}
+
 /*Input style*/
 .form {
-	margin-left: 25%;
-	margin-top: 300px;
+	margin-left: 270px;
+	margin-top: 20px;
+	text-align: center;
 }
 
 .form__input-div {
 	position:relative;
 }
 
-.form__input-div .flaticon-profile7 {
+.flaticon-profile7 ,
+.flaticon-rounded26 , 
+.flaticon-drawing4 {
 	position: absolute;
-	top: 11px;
+	top: 14px;
 	left: 13px;	
 }
 
@@ -147,8 +157,8 @@ a {
 } 
 
 .form__input {
-	width: 600px;
-	max-height: 55px;
+	width: 700px;
+	height: 50px;
 	padding: 10px 0;
 	margin: 20px;
 	border:1px solid #cfd9db;
@@ -157,6 +167,10 @@ a {
 	display: block;
 	text-indent: 45px;
 	color: black;
+}
+
+.form__input--message {
+	padding: 0;
 }
 
 
